# irsl_choreonoid_ros

./: CMakeLists.txt  README.md  package.xml  setup.py
.github/workflows/: dispatch.yaml
cnoid_scripts/: setup_cnoid.py  setup_ros_simulation_sample.py  test_world.yaml
config/: choreonoid_ros_template.cnoid  setup_cnoid_template.yaml
irsl_choreonoid_ros/: RobotInterface.py  cnoid_ros_util.py  convert_msgs.py  setup_cnoid.py  tf_utils.py
launch/: load_setup_cnoid.py  run_sim_with_setup_cnoid.launch  sim_robot.launch
node/: colorsensor_converter_node.py  tof_converter_node.py  wheelcontroller.py
python/: generate_cnoid.py  generate_controller_config.py  generate_dynamixel_config.py  generate_ri_config.py  generate_robot_sensor_config.py  generate_ros_settings.py  generate_roscontroller_config.py  generate_roslaunch.py  generate_wheelconfig.py  generate_world_config.py  gripper_to_trajectory_bridge.py  send_gripper_action.py
python/choreonoid_sim/: setup_cnoid.py  setup_ros_simulation_sample.py
python/motion_execute_graph/: ExecuteGraph.py  MotionExecuteGraphGenerator.py  README.md  gen_sample.py  motion_exec_graph_demo.py  motion_exec_graph_ros_demo.py  sample.dot  sample.new.dot
sample/: ReadMe.md  block.body  block.wrl  fullset_robot.body  fullset_robot.cnoid  fullset_robot.roboasm  fullset_robot.urdf  fullset_robot_robotinterface.yaml  fullset_robot_roscontrol.yaml  fullset_robot_wheel.yaml  line_detection_ri.py  motionlib.py  run_sim_robot.launch  smach_definition.py  smach_gen_sample.py  stop_robot_smach.py
sample/cnoid_script/: create_environment.ipynb  sample_world.yaml
sample/fullset_robot/: ReadMe.md  floor_field.body  fullset_robot.cnoid  fullset_robot.urdf  fullset_robot_roscontrol.yaml  setup_cnoid_template.yaml  stop_robot.py  stop_robot_ri.py  stop_robot_sm.dot
sample/fullset_robot/meshes/: tof-sensor.mtl
sample/meshes/: omni_wheel_m.mtl
sample/meshes_xseries/: XL-430_mm.mtl
sample/openlab2023/: ReadMe.md  arm_robot3_r1.roboasm  arm_robot3_r1.urdf  demo_prog.ipynb  object.body  robotinterface.yaml  roscontrol_config.yaml  run_sim_robot.launch  sim_arm_robot3.cnoid
scripts/: generate_settings.sh
src/irsl_choreonoid_ros/: RobotInterface.py  cnoid_ros_util.py  setup_cnoid.py
