cmake_minimum_required(VERSION 3.0.2)
cmake_policy(SET CMP0003 NEW)
cmake_policy(SET CMP0057 NEW)

project(irsl_choreonoid_ros)

#add_compile_options(-std=c++17)
#set(CMAKE_BUILD_TYPE RelWithDebInfo)

find_package(catkin REQUIRED)
# find_package(choreonoid_ros REQUIRED)

catkin_package(
  DEPENDS
  INCLUDE_DIRS
  LIBRARIES
  CATKIN_DEPENDS
)

install(DIRECTORY config
  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
  USE_SOURCE_PERMISSIONS
  )
install(DIRECTORY launch
  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
  USE_SOURCE_PERMISSIONS
  )
#
install(DIRECTORY python
  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
  )
install(DIRECTORY node
  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
  )
