<?xml version="1.0"?>
<package format="2">
  <name>irsl_choreonoid_ros</name>
  <version>0.0.0</version>
  <description>choreonoid_ros utility package</description>

  <maintainer email="faculty@irsl.eiiris.tut.ac.jp"> IRSL at Toyohashi Tech </maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>irsl_choreonoid</depend>
  <depend>choreonoid_ros</depend>
</package>
