<?xml version="1.0"?>
<package format="2">
  <name>irsl_choreonoid_ros</name>
  <version>0.0.0</version>
  <description>choreonoid_ros utility package</description>

  <maintainer email="faculty@irsl.eiiris.tut.ac.jp"> IRSL at Toyohashi Tech </maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>irsl_choreonoid</exec_depend>
  <exec_depend>choreonoid_ros</exec_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <!--exec_depend>cv_bridge_python3</exec_depend-->

  <exec_depend>smach_ros</exec_depend>
  <exec_depend>smach_viewer</exec_depend>
  <exec_depend>python3-pygraphviz</exec_depend>
</package>
